<resources>
    <string name="app_name">Mind Blooming</string>

    <!-- permission message -->
    <string name="permission_denied">Storage access permission is required to run this feature.</string>

    <!-- intro text -->
    <string name="intro_one_text">Organize your ideas\ninto a mind map!</string>
    <string name="intro_two_text">Manage mind map\nas a series</string>
    <string name="intro_three_text">save mind map\nas a picture</string>

    <!-- button -->
    <string name="ok">OK</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>

    <!-- Toolbar -->
    <string name="main_toolbar_title">Idea List</string>
    <string name="main_toolbar_hint">Search for ideas</string>
    <string name="starred_toolbar_title">Starred</string>
    <string name="series_list_toolbar_title">Series List</string>
    <string name="series_title_edit">Title</string>
    <string name="series_description_edit">Description</string>
    <string name="setting_toolbar_title">Setting</string>

    <!-- menu -->
    <string name="search_menu">Search</string>
    <string name="series_add_menu">Add series</string>
    <string name="series_delete_menu">Delete series</string>
    <string name="add_idea_menu">Add idea</string>

    <string name="idea_title_edit_menu">Edit Idea Title</string>
    <string name="idea_save_menu">Save Idea</string>
    <string name="idea_delete_menu">Delete Idea</string>
    <string name="idea_series_add_menu">Add to series</string>
    <string name="idea_export_menu">Export</string>

    <string name="action_mode_select_all_menu">Select all</string>
    <string name="action_mode_delete_menu">Delete</string>

    <string name="drawer_starred_menu">Starred</string>
    <string name="drawer_setting_menu">Setting</string>

    <string name="drawer_series_title">Series</string>
    <string name="drawer_series_list">Series list</string>
    <string name="drawer_series_one">Series 1</string>
    <string name="drawer_series_two">Series 2</string>
    <string name="drawer_series_three">Series 3</string>

    <string name="version_text" translatable="false">Ver.</string>

    <!-- sort -->
    <string name="sort_group">SORT BY</string>
    <string name="sort_title">Idea title</string>
    <string name="sort_created_date">Idea creation date</string>
    <string name="sort_modified_date">Last modified date</string>
    <string name="sort_starred">Starred date</string>
    <string name="sort_series">Date added to series</string>

    <!-- AlertDialog -->
    <string name="permission_dialog_title">Permission</string>
    <string name="permission_dialog_msg">Storage access permission is required to run this feature.
        Please allow storage access permission at [Settings > Permission]</string>
    <string name="delete_dialog_msg">Are you sure you want to delete?</string>
    <string name="series_delete_dialog_title">Series delete</string>
    <string name="series_delete_dialog_msg">Are you sure you want to delete this series?</string>
    <string name="edit_title_dialog_title">Edit title</string>
    <string name="add_item_dialog_title">Add new item</string>
    <string name="edit_item_text_dialog_title">Edit item text</string>
    <string name="item_delete_dialog_msg">Are you sure you want to delete this item?</string>
    <string name="idea_delete_dialog_msg">Are you sure you want to delete this idea?</string>
    <string name="delete_selected_dialog_msg">Are you sure you want to delete the selected ideas?</string>
    <string name="remove_selected_from_series_dialog_msg">Are you sure you want to remove the selected ideas from the series?</string>
    <string name="unstarred_selected_dialog_msg">Are you sure you want to change the selected ideas to an asterisk-free state?</string>

    <string name="export_idea_dialog_title">Save as Image</string>

    <string name="background_color_dialog_title">Select background color</string>
    <string name="text_color_dialog_title">Select text color</string>

    <string name="dialog_apply">APPLY</string>
    <string name="dialog_discard">DISCARD</string>
    <string name="dialog_delete">DELETE</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_save">SAVE</string>
    <string name="dialog_setting">SETTINGS</string>


    <!-- Fab -->
    <string name="main_add_fab">Add an idea</string>
    <string name="series_add_fab">Add ideas at series</string>

    <!-- Bottom Sheet -->
    <string name="add_idea_title">Create Idea</string>
    <string name="add_mind_map">MIND MAP</string>
    <string name="add_flow_chart">FLOW CHART</string>

    <!-- Diagram Edit -->
    <string name="new_mind_map">New mind map</string>
    <string name="new_flow_chart">New Flow Chart</string>

    <!-- Hint -->
    <string name="title_edit_hint">Input new title</string>
    <string name="item_text_edit_hint">Input item text</string>
    <string name="series_add_hint">Series add</string>

    <!-- Error msg -->
    <string name="no_character">Please enter a letter.</string>

    <!-- toast -->
    <string name="no_character_toast">Character must be entered.</string>
    <string name="saved_as_image">Saved as an image.</string>
    <string name="saved_series">Series information has been changed.</string>

    <!-- Idea List -->
    <string name="idea_list_date">Last modified Date:</string>
    <string name="selected_idea_count">\t selected</string>

    <!-- Series -->
    <string name="new_series">New Series</string>
    <string name="no_series">No Series</string>

    <!-- ColorPicker -->
    <string name="recently_used_color">Recently used color</string>

    <!-- Setting Fragment -->
    <string name="theme_setting">Themes</string>
    <string name="system_theme">System Mode</string>
    <string name="system_theme_detail">Automatically switches to light/dark mode according to system settings.</string>
    <string name="light_theme">Light Mode</string>
    <string name="dark_theme">Dark Mode</string>

    <!-- View Description -->
    <string name="splash_image_description">App icon</string>
</resources>