<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen
        app:defaultValue="0"
        app:iconSpaceReserved="false"
        app:key="theme"
        app:persistent="false"
        app:title="@string/theme_setting">

        <com.hwichance.android.mindblooming.custom_views.RadioButtonPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="systemMode"
            app:summary="@string/system_theme_detail"
            app:title="@string/system_theme" />
        <com.hwichance.android.mindblooming.custom_views.RadioButtonPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="lightMode"
            app:title="@string/light_theme" />
        <com.hwichance.android.mindblooming.custom_views.RadioButtonPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="darkMode"
            app:title="@string/dark_theme" />

    </PreferenceScreen>
</PreferenceScreen>